# browser

./: README.md  client.c  curlrc  main.rs  simple_parse.rs
GUI_base/: main.cpp
GUI_base/GUI/: Cargo.toml
GUI_base/cpp_parse/: build.txt  client.c  client.h  html_parser.hpp
GUI_browser/: CMakeLists.txt  README.md  README.txt  TODO  main.cpp  memo  require.txt  setup.sh
GUI_browser/GUI/: build.rs  guilib.hpp  lib.cpp
GUI_browser/GUI/src/: main.rs
GUI_browser/cpp_parse/: CMakeLists.txt  client.c  client.h  html_parser.cpp  html_parser.hpp  img_recv.c  img_req.c
GUI_browser/glad/include/glad/: glad.h
GUI_browser/glad/src/: glad.c
GUI_browser/imgui/backends/: imgui_impl_glfw.cpp
browser/: Cargo.toml
browser/src/: animation_logic.rs  animation_ui.rs  constants.rs  ffmpeg.rs  graph_anime.rs  http_req.rs  img_server.rs  main.rs  menu.rs  mode_s.rs  p2p.rs
client/: client.c  html_parse.cpp
cpp_parse/: build.txt  main.cpp
feature/: memo_to_criminal.txt
p2p/client/: client.cpp  client.hpp
p2p/lib/: lib.hpp
p2p/main/: main.cpp
p2p/server/: listener.cpp  listener.hpp
