[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.34.1"
tokio = { version = "1", features = ["full"] }
futures-lite = "1.13"
reqwest = { version = "0.12", features = ["json", "blocking"], default-features = false }
anyhow = "1.0" 
pnet = "0.34"
ron = "0.10.1"
argh = "0.1.13"
bevy-scene-hook = "10.0.0"
bevy-tokio-tasks = "0.16.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
